created regiatration and login #1 #2

--- a/socialnet/templates/account/user_list.html
+++ b/socialnet/templates/account/user_list.html
@@ -3,8 +3,8 @@
 {% block head %}
 {% endblock head %}
 
-{% block body %}
+{% block content %}
     {% for user in users %}
         {{ user }}<br/>
     {% endfor %}
-{% endblock body %}
+{% endblock content %}
