--- a/socialnet/templates/base.html
+++ b/socialnet/templates/base.html
@@ -6,6 +6,13 @@
     {% block head %}{% endblock head %}
 </head>
 <body>
-{% block body %}{% endblock body %}
+{% block body %}
+    <div class="header">
+        {% include 'header.html' %}
+    </div>
+    <div class="content">
+        {% block content %}{% endblock content %}
+    </div>
+{% endblock body %}
 </body>
 </html>
