Added initialization of profile. Corrected templates

--- a/socialnet/templates/base.html
+++ b/socialnet/templates/base.html
@@ -9,6 +9,14 @@
 {% block body %}
     <div class="header">
         {% include 'header.html' %}
+        {% block header %}
+            {% if not user.is_authenticated %}
+                <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
+                <li><a href="{% url 'auth_login' %}">Log in</a></li>
+            {% else %}
+                <li><a href="{% url 'auth_logout' %}?next={{ request.path }}">Log out</a></li>
+            {% endif %}
+        {% endblock header %}
     </div>
     <div class="content">
         {% block content %}{% endblock content %}
