--- a/socialnet/templates/registration/base_registration.html
+++ b/socialnet/templates/registration/base_registration.html
@@ -3,3 +3,9 @@
 
 {% block title %}Registration{% endblock %}
 {% block body_class %}{{ block.super }} registration{% endblock %}
+
+{% block header %}
+    {% if not user.is_authenticated  %}
+        <li><a href="{% url 'auth_login' %}">Log in</a></li>
+    {% endif %}
+{% endblock %}
